--- a/package.json
+++ b/package.json
@@ -10,42 +10,41 @@
     "not dead"
   ],
   "scripts": {
-    "start": "npm run build:dev && npm run dev-server",
-    "build:dev": "webpack --config webpack.config.js --env development mode=development",
-    "build:prod": "webpack --config webpack.config.js --env production mode=production",
-    "dev-server": "webpack serve --config webpack.config.js --env development mode=development"
+      "start": "npm run build:dev && npm run dev-server",
+      "build:dev": "webpack --config webpack.config.js --env development mode=development",
+      "build:prod": "webpack --config webpack.config.js --env production mode=production",
+      "dev-server": "webpack serve --config webpack.config.js --env development mode=development"
   },
   "author": "karihold",
   "license": "ISC",
-  "keywords": [],
   "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/plugin-transform-regenerator": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/runtime": "^7.14.5",
-    "autoprefixer": "^10.2.6",
-    "babel-loader": "^8.2.2",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "core-js": "^3.14.0",
-    "css-loader": "^5.2.6",
+    "@babel/core": "^7.18.5",
+    "@babel/plugin-transform-regenerator": "^7.18.0",
+    "@babel/plugin-transform-runtime": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/runtime": "^7.18.3",
+    "autoprefixer": "^10.4.7",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
+    "core-js": "^3.22.8",
+    "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.1",
-    "mini-css-extract-plugin": "^1.6.0",
-    "node-sass": "^6.0.0",
-    "postcss": "^8.3.2",
-    "postcss-csso": "^5.0.1",
-    "postcss-loader": "^6.1.0",
-    "postcss-preset-env": "^6.7.0",
-    "sass-loader": "^12.1.0",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.14",
+    "postcss-csso": "^6.0.0",
+    "postcss-loader": "^7.0.0",
+    "postcss-preset-env": "^7.7.1",
+    "sass-loader": "^13.0.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0"
   }
 }
